# ntua-blockchat

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: setup_env.sh
src/blockchat/: __init__.py  __main__.py  block.py  blockchain.py  bootstrap.py  bootstrap_cli.py  bootstrap_p.py  client.py  client_p.py  main_bootstrap.py  main_cli.py  main_client.py  main_docker.py  node.py  transaction.py  wallet.py
src/blockchat/main/cli/: cli.py
src/blockchat/util/: termcolor.py
tests/: test_main.py
